# Pi-Sensors

./: .gitignore  CMakeLists.txt  IMUconfig.cfg  main.cpp
KalmanFiltering/: KF.cpp  KF.h  VerticalMotionSimulator.h  srSPKF.cpp  srSPKF.h
examples/BMI088/: BMI088.h  gpio.h  main  main.cpp  test  test.cpp  timer.h  vqf.cpp
examples/DPS310/: dps310.h  dps368.h  main.cpp
examples/DPS368/: CMakeLists.txt  DPS368.h  main.cpp
examples/LIS2MDL/: LIS2MDL.h  Parser.cpp  Parser.h  config.txt  main.cpp
examples/LIS3MDL/: Calibration.py  LIS2MDL.h  LISxMDL.h  daepso.py  gpio.cpp  lis3mdl_test  mag_xyz.csv  mag_xyz_20260112_1644.csv  main.cpp  pyLISxMDL.cpp  test.py
examples/MCP3561/: DataBuffer.h  MCP356x.cpp  MCP356x.h  main.cpp  timer.h
examples/PCA9885/: MotorTest.cpp  PCA9685.cpp  PCA9685.h  aux.h  main  main.cpp  motor_test
examples/ads1115/: ads1115_test  main.cpp
header/: BMI088.h  DPS368.h  DataBuffer.h  IMU.h  IMUConfig.h  LIS2MDL.h  LISxMDL.h  PCA9685.h  Parser.h  ads1115.h  dps310.h  gpio.h  srKF.h  timer.h  vqf.h
python/: CMakeLists.txt  Calibration.py  daepso.py  imupy.cpp  test.py
src/: PCA9685.cpp  gpio.cpp  srKF.cpp  vqf.cpp
